...

        Flows.use(movieFlow, actorFlow, searchFlow, when: .created) { [unowned self] (root1: UINavigationController, root2: UINavigationController, root3: UINavigationController) in
            let tabBarItem1 = UITabBarItem(title: "MovieList", image: UIImage(systemName: "house"), selectedImage: nil)
            root1.tabBarItem = tabBarItem1
            root1.title = "Movie List"
            
            let tabBarItem2 = UITabBarItem(title: "Actors", image: UIImage(systemName: "flame.fill"), selectedImage: nil)
            root2.tabBarItem = tabBarItem2
            root2.title = "Actors"
            
            let tabBarItem3 = UITabBarItem(title: "Suche", image: UIImage(systemName: "magnifyingglass"), selectedImage: nil)
            root3.tabBarItem = tabBarItem3
            root3.title = "Suche"

            self.rootViewController.setViewControllers([root1, root2, root3], animated: false)
        }

...
